homework_11/task_3/nginx_2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
spec:
  replicas: 1
  strategy:
  selector:
    matchLabels:
      app: nginx-v2
  template:
    metadata:
      labels:
        app: nginx-v2
    spec:
      containers:
        - name: nginx
          image: nginx:1.19
          ports:
            - containerPort: 80
          volumeMounts:
            - name: configmap-html
              mountPath: /usr/share/nginx/html

      volumes:
        - name: configmap-html
          configMap:
            name: nginx-html-v2
