homework_11/task_3/service_1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-v1-svc
spec:
  selector:
    app: nginx-v1
  ports:
    - port: 80
      targetPort: 80
