homework_11/task_3/service_2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-v2-svc
spec:
  selector:
    app: nginx-v2
  ports:
    - port: 80
      targetPort: 80
